:construction: Add putChess sound.

--- a/gobang-service/src/main/resources/gobang/angular.json
+++ b/gobang-service/src/main/resources/gobang/angular.json
@@ -28,7 +28,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-
+              "node_modules/howler/dist/howler.min.js"
             ]
           },
           "configurations": {
