:recycle: Adjust Homepage's RWD

--- a/gobang-service/src/main/resources/gobang/angular.json
+++ b/gobang-service/src/main/resources/gobang/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "gobang": {
@@ -122,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "gobang"
+    }
+  },
+  "defaultProject": "gobang",
+  "cli": {
+    "analytics": false
+  }
 }
