:recycle: Move the angular module (/gobang-service/../resources/gobang) out to be /gobang-web

--- a/gobang-web/angular.json
+++ b/gobang-web/angular.json
@@ -27,7 +27,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/howler/dist/howler.min.js"
+              "node_modules/howler/dist/howler.min.js",
+              "node_modules/@stomp/rx-stomp/esm6/index.d.ts"
             ]
           },
           "configurations": {
