--- a/gobang-web/package.json
+++ b/gobang-web/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.5",
+    "@angular/cdk": "^9.1.2",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
@@ -20,8 +21,13 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@fullcalendar/core": "^4.4.0",
     "@stomp/rx-stomp": "^0.3.4",
+    "chart.js": "^2.9.3",
     "howler": "^2.1.3",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
