--- a/gobang-service/Dockerfile
+++ b/gobang-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jre-alpine
-COPY target/*.jar /app.jar
-EXPOSE 10000
+COPY ./target/*.jar /app.jar
+EXPOSE 8080
 CMD /usr/bin/java -jar /app.jar
